03-kubernetes/02-distributed/todo-api-deploy.yaml
# Deployment para todo-api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  labels:
    app: todo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
      - name: todo-api
        image: lemoncodersbc/lc-todo-api:v5-2024
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"

---
# Service ClusterIP para todo-api
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  labels:
    app: todo-api
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: todo-api
